<resources>
    <string name="app_name">Extended settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_description_adbonswitch">Enable TCP/IP debugging over network interfaces (Wi\u2011Fi, USB networks). This setting is reset on reboot.</string>
    <string name="pref_description_adbonswitchdialog">WARNING: When ADB over network is enabled, your phone is open for intrusions on all connected networks!\n\nOnly use this feature when you are connected on trusted networks.\n\nDo you really want to enable this function?</string>
    <string name="pref_title_adbonswitch">ADB over network</string>
    <string name="pref_description_drsdialog">Dynamic Resolution Switch needs to restart the UI.\n\nDo you want to continue?</string>
    <string name="pref_title_dynres_switch">Dynamic Resolution Switch</string>
    <string name="pref_title_dispcal_switch">Display white point calibration</string>
    <string name="pref_led_dim_enabled">Enable dimming of notification LED</string>
    <string name="pref_led_dim_threshold">Ambient light threshold</string>
    <string name="pref_led_dim_scaling">LED dimming level</string>
    <string name="error_connect_to_wifi">Error: You need to be connected to a WiFi!</string>
    <string name="pref_description_8mp">Use the 8MP camera mode for higher FPS and better nightmode picture quality. Disable to use the 23MP mode.</string>
    <string name="pref_title_8mp">Enable 8MP mode</string>
    <string name="pref_title_alt_act">Use alternate actuator</string>
    <string name="pref_description_alt_act">On some tablets we have a different actuator, change this settings if you\'re experiencing issues.</string>
    <string name="dialog_reboot_required">Reboot required</string>
    <string name="dialog_reboot_required_summary">A reboot is required for the changes to take effect!</string>
    <string name="pref_led_dim_enabled_summary">Dim the notification LED in low light conditions, uses the ambient light and proximity sensors</string>
    <string name="pref_led_dim_threshold_summary">LED dimming is active if ambient light is below this threshold</string>
    <string name="pref_led_dim_scaling_summary">The percentage of normal brightness to dim LED by</string>
    <string name="reboot_now">Reboot now</string>
    <string name="reboot_later">Reboot later</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>

    <!-- DO NOT TRANSLATE Empty summary for dynamic preferences -->
    <string name="summary_empty" translatable="false"></string>
</resources>
