<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="8mp_switch"
        android:summary="@string/pref_description_8mp"
        android:title="@string/pref_title_8mp" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="alt_act_switch"
        android:summary="@string/pref_description_alt_act"
        android:title="@string/pref_title_alt_act" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="adbon_switch"
        android:summary="@string/pref_description_adbonswitch"
        android:title="@string/pref_title_adbonswitch" />

    <ListPreference
        android:defaultValue="1"
        android:key="dynres_list_switch"
        android:title="@string/pref_title_dynres_switch"
        android:summary="Current resolution:"/>

    <ListPreference
        android:defaultValue="1"
        android:key="dispcal_list_switch"
        android:title="@string/pref_title_dispcal_switch"
        android:summary="Current calibration:"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="led_dim_enabled"
        android:summary="@string/pref_led_dim_enabled_summary"
        android:title="@string/pref_led_dim_enabled" />

    <android.support.v7.preference.SeekBarPreference
        android:key="led_dim_threshold"
        android:title="@string/pref_led_dim_threshold"
        android:summary="@string/pref_led_dim_threshold_summary"
        android:max="10"
        android:defaultValue="6"
        android:enabled="false" />

    <android.support.v7.preference.SeekBarPreference
        android:key="led_dim_scaling"
        android:title="@string/pref_led_dim_scaling"
        android:summary="@string/pref_led_dim_scaling_summary"
        android:max="10"
        android:defaultValue="5"
        android:enabled="false" />

</android.support.v7.preference.PreferenceScreen>
